[Refactor] File 컨트롤러 수정 및 Get 요청 인가